--- a/biblioteca/package.json
+++ b/biblioteca/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "force": "^0.0.3",
+    "moment": "^2.29.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
