--- a/biblioteca/package.json
+++ b/biblioteca/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "force": "^0.0.3",
     "moment": "^2.29.3",
+    "ng2-charts": "^3.0.11",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.17",
     "tslib": "^2.3.0",
